# llm-knowledge-base

./: .cursorrules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Glmtmp.txt  LICENSE  LLM_CODEBASE_KNOWLEDGE_BASE.md  README.md  RELEASE_CHECKLIST.md  benchmark.py  demo.py  demo.sh  embed_and_index.py  hybrid_retrieval.py  prompt_builder.py  pyproject.toml  requirements.txt  retrieval.py  schema.md  test_e2e.py  test_entries_quality.py  test_phase14_profiles.py  test_quality_audit.py  test_retrieval.py  test_retrieval_adversarial.py  test_retrieval_comprehensive.py  test_retrieval_edge_cases.py  validate_kb.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
anti-patterns/: api-antipatterns.md  api-ignoring-idempotency.md  api-incorrect-status-codes.md  api-no-input-validation.md  api-no-rate-limiting.md  api-versioning-anti-patterns.md  bash-antipatterns.md  ci-no-cache.md  concurrency-antipatterns.md  configuration-antipatterns.md  csharp-antipatterns.md  database-antipatterns.md  django-antipatterns.md  docker-antipatterns.md  docker-running-as-root.md  error-handling-antipatterns.md  general-antipatterns.md  git-antipatterns.md  git-bad-commit-messages.md  go-antipatterns.md  java-antipatterns.md  java-optional-misuse.md  javascript-antipatterns.md  kotlin-antipatterns.md  kotlin-scope-overuse.md  logging-anti-patterns.md  logging-antipatterns.md  perf-n-plus-one.md  perf-no-pagination.md  perf-string-concat-loop.md  perf-sync-in-async.md  perf-unindexed-queries.md  performance-antipatterns.md  php-antipatterns.md  python-antipatterns.md  python-mutable-defaults.md  (+15 more)
(+464 files in other folders)
